updated security config to cater for Cors issues